设置项目镜像为阿里云镜像

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,11 @@
             "App\\": "App/",
             "Sys\\": "Sys/"
         }
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://mirrors.aliyun.com/composer/"
+        }
     }
 }
