--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
+        "ext-pdo": "*",
         "overtrue/wechat": "^4.2",
         "nikic/fast-route": "^1.3",
         "symfony/http-foundation": "^4.3",
