--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
+SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 <IfModule mod_rewrite.c>
     RewriteEngine on
     RewriteRule  ^$ public/    [L]
