--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ composer.phar
 /vendor/
 /.idea/
 /runtime/
+.DS_Store
+/docker/mysql/data
+/docker/nginx/log
+/docker/php/log
 
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
