--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -8,7 +8,7 @@ server {
     location / {
         root   /usr/share/nginx/html/public;
         index  index.html index.htm index.php;
-        try_files $uri $uri/ /index.php$args;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     #error_page  404              /404.html;
